--- a/z_subview/FXDviewProgress.xib
+++ b/z_subview/FXDviewProgress.xib
@@ -13,7 +13,6 @@
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBProxyObject</string>
 			<string>IBUIActivityIndicatorView</string>
-			<string>IBUIButton</string>
 			<string>IBUILabel</string>
 			<string>IBUIProgressView</string>
 			<string>IBUISlider</string>
@@ -189,7 +188,7 @@
 						<string key="NSFrame">{{20, 322}, {280, 9}}</string>
 						<reference key="NSSuperview" ref="410819391"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="614310812"/>
+						<reference key="NSNextKeyView"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<bool key="IBUIOpaque">NO</bool>
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
@@ -200,41 +199,6 @@
 						<object class="NSColor" key="IBUITrackTintColor">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MCAwLjUAA</bytes>
-						</object>
-					</object>
-					<object class="IBUIButton" id="614310812">
-						<reference key="NSNextResponder" ref="410819391"/>
-						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{124, 417}, {73, 44}}</string>
-						<reference key="NSSuperview" ref="410819391"/>
-						<reference key="NSWindow"/>
-						<string key="NSReuseIdentifierKey">_NS:9</string>
-						<object class="NSColor" key="IBUIBackgroundColor">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MCAwLjUAA</bytes>
-						</object>
-						<bool key="IBUIOpaque">NO</bool>
-						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-						<int key="IBUIContentHorizontalAlignment">0</int>
-						<int key="IBUIContentVerticalAlignment">0</int>
-						<string key="IBUINormalTitle">CANCEL</string>
-						<object class="NSColor" key="IBUIHighlightedTitleColor" id="117734392">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MQA</bytes>
-						</object>
-						<reference key="IBUINormalTitleColor" ref="117734392"/>
-						<object class="NSColor" key="IBUINormalTitleShadowColor">
-							<int key="NSColorSpace">3</int>
-							<bytes key="NSWhite">MC41AA</bytes>
-						</object>
-						<object class="IBUIFontDescription" key="IBUIFontDescription">
-							<int key="type">2</int>
-							<double key="pointSize">15</double>
-						</object>
-						<object class="NSFont" key="IBUIFont">
-							<string key="NSName">Helvetica-Bold</string>
-							<double key="NSSize">15</double>
-							<int key="NSfFlags">16</int>
 						</object>
 					</object>
 				</array>
@@ -300,23 +264,6 @@
 					</object>
 					<int key="connectionID">19</int>
 				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">buttonCancel</string>
-						<reference key="source" ref="410819391"/>
-						<reference key="destination" ref="614310812"/>
-					</object>
-					<int key="connectionID">21</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchEventConnection" key="connection">
-						<string key="label">pressedCancelButton:</string>
-						<reference key="source" ref="614310812"/>
-						<reference key="destination" ref="410819391"/>
-						<int key="IBEventType">7</int>
-					</object>
-					<int key="connectionID">22</int>
-				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<array key="orderedObjects">
@@ -347,7 +294,6 @@
 							<reference ref="723036776"/>
 							<reference ref="352388749"/>
 							<reference ref="66103666"/>
-							<reference ref="614310812"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
@@ -381,11 +327,6 @@
 						<reference key="object" ref="66103666"/>
 						<reference key="parent" ref="410819391"/>
 					</object>
-					<object class="IBObjectRecord">
-						<int key="objectID">20</int>
-						<reference key="object" ref="614310812"/>
-						<reference key="parent" ref="410819391"/>
-					</object>
 				</array>
 			</object>
 			<dictionary class="NSMutableDictionary" key="flattenedProperties">
@@ -396,7 +337,6 @@
 				<string key="18.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="2.CustomClassName">FXDviewProgress</string>
 				<string key="2.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-				<string key="20.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="3.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="4.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 				<string key="5.IBPluginDependency">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
@@ -434,6 +374,7 @@
 					</object>
 					<dictionary class="NSMutableDictionary" key="outlets">
 						<string key="buttonCancel">UIButton</string>
+						<string key="imageviewCover">UIImageView</string>
 						<string key="indicatorActivity">UIActivityIndicatorView</string>
 						<string key="indicatorProgress">UIProgressView</string>
 						<string key="labelMessage_0">UILabel</string>
@@ -445,6 +386,10 @@
 						<object class="IBToOneOutletInfo" key="buttonCancel">
 							<string key="name">buttonCancel</string>
 							<string key="candidateClassName">UIButton</string>
+						</object>
+						<object class="IBToOneOutletInfo" key="imageviewCover">
+							<string key="name">imageviewCover</string>
+							<string key="candidateClassName">UIImageView</string>
 						</object>
 						<object class="IBToOneOutletInfo" key="indicatorActivity">
 							<string key="name">indicatorActivity</string>
