--- a/_scene/FXDsubviewInformation.xib
+++ b/_scene/FXDsubviewInformation.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14B25" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6250" systemVersion="14C68k" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
@@ -43,7 +43,7 @@
                     <color key="shadowColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                 </label>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" minimumFontSize="12" translatesAutoresizingMaskIntoConstraints="NO" id="4">
-                    <rect key="frame" x="10" y="340" width="300" height="41"/>
+                    <rect key="frame" x="10" y="348" width="300" height="41"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="41" id="LPP-qg-oxB"/>
@@ -75,7 +75,7 @@
             <color key="backgroundColor" white="0.0" alpha="0.75" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="10" firstAttribute="top" secondItem="3" secondAttribute="bottom" constant="33" id="1BI-je-2S3"/>
-                <constraint firstItem="4" firstAttribute="top" secondItem="3" secondAttribute="bottom" constant="37" id="4dA-iY-yIO"/>
+                <constraint firstItem="4" firstAttribute="top" secondItem="3" secondAttribute="bottom" constant="45" id="4dA-iY-yIO"/>
                 <constraint firstItem="3" firstAttribute="centerX" secondItem="5" secondAttribute="centerX" constant="-0.5" id="833-8U-aSt"/>
                 <constraint firstItem="3" firstAttribute="centerX" secondItem="18" secondAttribute="centerX" constant="-0.5" id="8cU-2m-2ZR"/>
                 <constraint firstItem="3" firstAttribute="centerX" secondItem="4" secondAttribute="centerX" constant="-0.5" id="Rpw-rn-TQl"/>
