FIXED xib loading from fXDKit module

--- a/fXDKit/Resources/FXDsubviewInformation.xib
+++ b/fXDKit/Resources/FXDsubviewInformation.xib
@@ -12,7 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="2" customClass="FXDsubviewInformation" customModule="fXDKit" customModuleProvider="target">
+        <view contentMode="scaleToFill" id="2" customClass="FXDsubviewInformation">
             <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
